[gd_scene load_steps=21 format=3 uid="uid://67kdga75t3f6"]

[ext_resource type="Texture2D" uid="uid://d36yp82wxnate" path="res://Pictures/Badge.png" id="2_eoq3k"]
[ext_resource type="Script" path="res://code/player.gd" id="2_h6ilg"]
[ext_resource type="StyleBox" uid="uid://c1175ctofda8d" path="res://Style/RoundButton.tres" id="2_msahj"]
[ext_resource type="StyleBox" uid="uid://4un1gb1lgsec" path="res://Style/IsPolice.tres" id="2_x3upy"]
[ext_resource type="Texture2D" uid="uid://q5b6gjx3trua" path="res://Pictures/heart.png" id="3_b2kke"]
[ext_resource type="Script" path="res://code/Inv.gd" id="7_t8nir"]

[sub_resource type="Theme" id="Theme_1bpni"]
Label/colors/font_color = Color(0, 0, 0, 1)
Label/font_sizes/font_size = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cl26o"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2brl0"]

[sub_resource type="Theme" id="Theme_uqy4v"]
Button/font_sizes/font_size = 40
Button/styles/disabled = SubResource("StyleBoxEmpty_2brl0")
Button/styles/focus = ExtResource("2_msahj")
Button/styles/hover = ExtResource("2_msahj")
Button/styles/normal = ExtResource("2_msahj")
Button/styles/pressed = ExtResource("2_msahj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wijdt"]
texture = ExtResource("2_eoq3k")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vp77d"]
texture = ExtResource("3_b2kke")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nhkjm"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rm22x"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ldx4"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wi5tl"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a6csb"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_2n3ip"]
Button/font_sizes/font_size = 50
Button/styles/disabled = SubResource("StyleBoxFlat_nhkjm")
Button/styles/focus = SubResource("StyleBoxFlat_rm22x")
Button/styles/hover = SubResource("StyleBoxFlat_3ldx4")
Button/styles/normal = SubResource("StyleBoxFlat_wi5tl")
Button/styles/pressed = SubResource("StyleBoxFlat_a6csb")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aso48"]
bg_color = Color(0.129412, 0.129412, 0.129412, 0.690196)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="Theme" id="Theme_f0iob"]
Label/colors/font_color = Color(1, 0, 0.164706, 1)

[node name="Player" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 1
theme = SubResource("Theme_1bpni")
theme_override_styles/panel = SubResource("StyleBoxFlat_cl26o")
script = ExtResource("2_h6ilg")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBC" type="VBoxContainer" parent="MC"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBC" type="HBoxContainer" parent="MC/VBC"]
layout_mode = 2
theme = SubResource("Theme_uqy4v")
theme_override_constants/separation = 20

[node name="ID" type="Label" parent="MC/VBC/HBC"]
layout_mode = 2
text = "1."

[node name="IsPolice" type="Button" parent="MC/VBC/HBC"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_styles/normal = ExtResource("2_x3upy")
theme_override_styles/hover = ExtResource("2_x3upy")
theme_override_styles/pressed = SubResource("StyleBoxTexture_wijdt")
toggle_mode = true
action_mode = 0

[node name="IsCouple" type="Button" parent="MC/VBC/HBC"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_styles/normal = ExtResource("2_x3upy")
theme_override_styles/hover = ExtResource("2_x3upy")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vp77d")
toggle_mode = true
action_mode = 0

[node name="Character" type="Button" parent="MC/VBC/HBC"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0

[node name="Witch Inv" type="VBoxContainer" parent="MC/VBC/HBC"]
visible = false
layout_mode = 2
script = ExtResource("7_t8nir")

[node name="Cure" type="Button" parent="MC/VBC/HBC/Witch Inv"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "解"

[node name="Poison" type="Button" parent="MC/VBC/HBC/Witch Inv"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "毒"

[node name="Die" type="Button" parent="MC/VBC/HBC"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_colors/font_color = Color(0.619608, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.619608, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.619608, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.619608, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.619608, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0.619608, 0, 0, 1)
text = "死亡"

[node name="GridContainer" type="GridContainer" parent="MC/VBC"]
custom_minimum_size = Vector2(630, 0)
layout_mode = 2
size_flags_horizontal = 8
theme = SubResource("Theme_2n3ip")
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 5

[node name="Add" type="Button" parent="MC/VBC/GridContainer"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 80
text = "+"

[node name="PC" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aso48")

[node name="MC2" type="MarginContainer" parent="PC"]
layout_mode = 2
theme = SubResource("Theme_f0iob")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBC" type="HBoxContainer" parent="PC/MC2"]
layout_mode = 2
theme = SubResource("Theme_uqy4v")
theme_override_constants/separation = 20
alignment = 1

[node name="ID" type="Label" parent="PC/MC2/HBC"]
layout_mode = 2
text = "1 號玩家"

[node name="Status" type="Label" parent="PC/MC2/HBC"]
layout_mode = 2
text = "死亡"

[connection signal="pressed" from="MC/VBC/HBC/Character" to="." method="_on_character_pressed"]
[connection signal="pressed" from="MC/VBC/HBC/Character" to="MC/VBC/HBC/Witch Inv" method="_on_character_pressed"]
[connection signal="pressed" from="MC/VBC/HBC/Witch Inv/Cure" to="." method="_on_cure_pressed"]
[connection signal="pressed" from="MC/VBC/HBC/Witch Inv/Poison" to="." method="_on_poison_pressed"]
[connection signal="pressed" from="MC/VBC/HBC/Die" to="." method="_on_die_pressed"]
[connection signal="pressed" from="MC/VBC/GridContainer/Add" to="." method="_on_add_pressed"]
